--- a/Shop_Пешин.csproj
+++ b/Shop_Пешин.csproj
@@ -66,6 +66,7 @@
     <Compile Include="Classes\Children.cs" />
     <Compile Include="Classes\RepoItems.cs" />
     <Compile Include="Classes\Shop.cs" />
+    <Compile Include="Classes\Shopt.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
